[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/FKConsole/Scripts/Console_Main.gd" type="Script" id=1]
[ext_resource path="res://addons/FKConsole/Assets/Icon/Commands.svg" type="Texture" id=2]
[ext_resource path="res://addons/FKConsole/Scripts/UI_ConsoleLine.gd" type="Script" id=6]
[ext_resource path="res://addons/FKConsole/Assets/Themes/SourceHanSerifSC_Regular.tres" type="Theme" id=7]

[sub_resource type="Animation" id=1]
length = 0.25
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath("Container/Panel/ConsoleLine")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "clear"
}, {
"args": [  ],
"method": "clear"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.447059, 0.0705882, 0.0705882, 1 )

[node name="Console" type="CanvasLayer"]
pause_mode = 2
layer = 128
script = ExtResource( 1 )

[node name="ConsoleBox" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.8 )
anchor_right = 1.0
anchor_bottom = 0.5
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ConsoleBox"]
anims/fade = SubResource( 1 )

[node name="Container" type="VBoxContainer" parent="ConsoleBox"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConsoleText" type="RichTextLabel" parent="ConsoleBox/Container"]
margin_right = 1024.0
margin_bottom = 300.0
focus_neighbour_left = NodePath("../LineEdit")
focus_neighbour_top = NodePath("../LineEdit")
focus_neighbour_right = NodePath("../LineEdit")
focus_neighbour_bottom = NodePath("../LineEdit")
focus_next = NodePath("../LineEdit")
focus_previous = NodePath("../LineEdit")
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 7 )
custom_constants/line_separation = 4
bbcode_enabled = true
scroll_following = true
selection_enabled = true

[node name="Panel" type="Panel" parent="ConsoleBox/Container"]
margin_top = 300.0
margin_right = 1024.0
margin_bottom = 300.0
custom_styles/panel = SubResource( 2 )

[node name="ConsoleLine" type="LineEdit" parent="ConsoleBox/Container/Panel"]
anchor_right = 1.0
margin_top = 1.0
margin_right = -36.0
margin_bottom = 31.364
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
theme = ExtResource( 7 )
clear_button_enabled = true
placeholder_text = "请输入命令"
placeholder_alpha = 0.3
caret_blink = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
_sections_unfolded = [ "Anchor", "Caret", "Grow Direction", "Margin", "Material", "Pause", "Placeholder", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="Button_Commands" type="Button" parent="ConsoleBox/Container/Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -35.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = 35.0
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
